# tue_robocup

./: azure-pipelines.yml
challenge_demo/: README.md
challenge_final/scripts/: dirty_node.py
challenge_find_my_mates/src/: find_my_mates.py
challenge_following_and_guiding/src/: challenge_following_and_guiding.py
challenge_gpsr/: README.md
challenge_help_me_carry/src/: challenge_help_me_carry.py  challenge_help_me_carry2.py
challenge_manipulation/src/: manipulation.py
challenge_navigation/src/: challenge_navigation.py
challenge_person_recognition/src/: challenge_person_recognition.py
challenge_restaurant/: CMakeLists.txt  package.xml
challenge_restaurant/src/challenge_restaurant/: restaurant.py  store_waypoint.py  take_orders.py  timeout.py  wait_for_customer.py
challenge_rips/: README.md
challenge_set_a_table/src/: challenge_set_a_table.py
challenge_speech_recognition/src/: direct_speech_recognition.py  indirect_speech_recognition.py
challenge_spr/src/: challenge_spr.py
challenge_storing_groceries/launch/: spawn_objects.launch
challenge_storing_groceries/simulation/: objects_sdf.yaml
challenge_test/: CMakeLists.txt  README.md  setup.py
challenge_test/scripts/: test_challenge.py
challenge_test/src/: template_executive.py  test.py  test_random.py  test_states.py
robot_skills/: README.md
robot_skills/examples/: example_hero_motion.py  example_move_down_until_force_sensor_edge_up.py
robot_skills/test/: test_kdl.py
robot_smach_states/: README.md
robot_smach_states/examples/: hear_grasp.py  random_nav2.py  test-detect-faces  test-find-person
robot_smach_states/tutorial/: challenge_tutorial.md
tue_robocup/: package.xml
tue_rqt/: CMakeLists.txt  package.xml  plugin.xml  setup.py
tue_rqt/scripts/: state_machine_gui
(+122 files in other folders)
