<?xml version="1.0"?>
<package format="2">
  <name>challenge_restaurant</name>
  <version>0.0.0</version>
  <description>Restaurant challenge</description>

  <maintainer email="amigo@tue.nl">Ramon Wijnands</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>depth_image_proc</depend>
  <depend>pcl_conversion</depend>
  <depend>pcl_ros</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>

  <build_depend>robot_skills</build_depend>
  <build_depend>robot_smach_states</build_depend>
  <build_depend>message_generation</build_depend>

  <exec_depend>robot_skills</exec_depend>
  <exec_depend>robot_smach_states</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>python-markdown</exec_depend>
  <exec_depend>python-xhtml2pdf</exec_depend>
  <exec_depend>python-numpy</exec_depend>
  <exec_depend>tue_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
